<resources>
    <string name="app_name">QUAN LY HANG HOA</string>
    <string name="currency"><u>đ</u></string>
    <string name="sum_price">Sum price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="prompt_username">Tên đăng nhập</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="hoten">Trần Văn Công</string>
    <string name="lop">lop</string>
    <string name="mssv">mssv</string>
    <string name="email">email</string>
    <string name="phone">0123456789</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>