<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AuthorInfoCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/container_background"
        android:layout_margin="20dp"
        android:padding="20dp">
        <TextView
            android:id="@+id/lblHoVaTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/hoVaTen"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Tên sinh viên:">
        </TextView>
        <TextView
            android:id="@+id/hoVaTen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/lblHoVaTen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/hoten"
            android:textStyle="bold"
            android:layout_marginLeft="20dp">
        </TextView>

        <TextView
            android:id="@+id/lblLop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/lblHoVaTen"
            app:layout_constraintTop_toBottomOf="@+id/lblHoVaTen"
            android:text="Lớp:">
        </TextView>
        <TextView
            android:id="@+id/lop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/hoVaTen"
            app:layout_constraintTop_toBottomOf="@+id/hoVaTen"
            android:text="@string/lop"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/lblMSSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/lblHoVaTen"
            app:layout_constraintTop_toBottomOf="@+id/lop"
            android:text="MSSV:">
        </TextView>
        <TextView
            android:id="@+id/MSSV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/hoVaTen"
            app:layout_constraintTop_toBottomOf="@+id/lop"
            android:text="@string/mssv"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/lblHoVaTen"
            app:layout_constraintTop_toBottomOf="@+id/lblMSSV"
            android:text="Email:">
        </TextView>
        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/hoVaTen"
            app:layout_constraintTop_toBottomOf="@+id/lblMSSV"
            android:text="@string/email"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/lblPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/lblHoVaTen"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail"
            android:text="Số điện thoại:">
        </TextView>
        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/hoVaTen"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail"
            android:text="@string/phone"
            android:textStyle="bold">
        </TextView>
        <ImageButton
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/phone"
            app:layout_constraintTop_toTopOf="@+id/phone"
            app:layout_constraintBottom_toBottomOf="@+id/phone"
            android:src="@drawable/ic_baseline_local_phone_24"
            android:background="@drawable/add_button_background"
            ></ImageButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/AuthorInfoCover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:background="@drawable/container_background"
        android:padding="5dp">
        <FrameLayout
            android:id="@+id/mapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
